Changed Books Index view

--- a/Areas/Admin/Views/Books/Index.cshtml
+++ b/Areas/Admin/Views/Books/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Books>
 
-<h1>Books List</h1>
+<h1>Github Test Books List</h1>
 
 <div>
     <table class="table" table-bordered table-striped table-hover>
