--- a/Areas/Admin/Views/Books/Edit.cshtml
+++ b/Areas/Admin/Views/Books/Edit.cshtml
@@ -5,6 +5,7 @@
 <div class="col-md-10">
     <form asp-action="Edit" method="post" enctype="multipart/form-data">
         <input type="hidden" asp-for="Book.BookID" />
+        <input asp-for="Book.ImgUrl" hidden />
 
         <div class="form-group">
             <label asp-for="Book.Title" class="control-label"></label>
@@ -30,23 +31,7 @@
             <label asp-for="Book.ISBN" class="control-label"></label>
             <input asp-for="Book.ISBN" class="form-control" />
         </div>
-        @*
-        <div class="form-group">
-        <label asp-for="CategoryID" class="control-label"></label>
-        <select asp-for="CategoryID" class="form-control" asp-items="ViewBag.ListOfCategories">
-        <option disabled selected>Select a Category</option>
-        </select>
-        <span asp-validation-for="CategoryID" class="text-danger"></span>
-        </div>
 
-        <div class="form-group">
-        <label asp-for="CategoryID" class="control-label">Category</label>
-        <select asp-for="CategoryID" class="form-control" asp-items="@(ViewData["ListOfCategoriesVD"] as IEnumerable<SelectListItem>)">
-        <option disabled selected>Select a Category</option>
-        </select>
-        <span asp-validation-for="CategoryID" class="text-danger"></span>
-        </div>
-        *@
         <div class="form-group">
             <label asp-for="Book.CategoryID" class="control-label">Category</label>
             <select asp-for="Book.CategoryID" class="form-control" asp-items="@Model.ListOfCategories">
