--- a/Areas/Admin/Views/Category/Delete.cshtml
+++ b/Areas/Admin/Views/Category/Delete.cshtml
@@ -1,1 +1,26 @@
 ﻿@model Category
+
+<h1>Delete Category</h1>
+
+<div class="col-md-10">
+    <form asp-action="Delete">
+
+        <input asp-for="CategoryID" type="hidden" />
+
+        <div class="form-group">
+            <label asp-for="Name" class="control-label"></label>
+            <input asp-for="Name" disabled class="form-control"/>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Description" class="control-label"></label>
+            <input asp-for="Description" disabled class="form-control" />
+        </div>
+
+        <div class="form-group">
+            <input type="Submit" value="Delete Category" class="btn btn-danger form-control"/>
+        </div>
+    </form>
+
+</div>
+
