--- a/Areas/Admin/Views/Category/Edit.cshtml
+++ b/Areas/Admin/Views/Category/Edit.cshtml
@@ -4,6 +4,23 @@
 
 <div class="col-md-10">
     <form asp-action="Edit">
-        
+
+        <input asp-for="CategoryID" type="hidden" />
+
+        <div class="form-group">
+            <label asp-for="Name" class="control-label"></label>
+            <input asp-for="Name" class="form-control"/>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Description" class="control-label"></label>
+            <input asp-for="Description" class="form-control" />
+        </div>
+
+        <div class="form-group">
+            <input type="Submit" value="Save Changes"class="btn btn-outline-primary" />
+        </div>
     </form>
+
 </div>
+
